--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -1,4 +1,5 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,16 @@
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
     <div class="user-infor-container">
         <form method="POST" action="/users/create-user">
             <div class="container">
                 <div class="row">
-                    <div class="mb-3 mt-3 col-6 ">
+                    <div class="pt-3">
+                        <h3> Create a new user:</h3>
+                    </div>
+                    <div class="mb-3 col-6 ">
                         <label for="email" class="form-label">Email address</label>
                         <input type="email" class="form-control" id="email" name="email" required>
                     </div>
@@ -35,4 +40,5 @@
         </form>
     </div>
 </body>
+
 </html>
