--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -42,7 +42,7 @@
                 <table class="table table-hover table-bordered">
                     <thead>
                         <tr>
-                            <th scope="col">#</th>
+                            <th scope="col">ID</th>
                             <th scope="col">Email</th>
                             <th scope="col">Username</th>
                             <th>Actions</th>
@@ -50,21 +50,24 @@
                     </thead>
                     <tbody>
                         <% userList.forEach(function(item,index){ %>
-                                <tr>
-                                    <th scope="row">
-                                        <%= index +1 %>
-                                    </th>
-                                    <td>
-                                        <%= item.email %>
-                                    </td>
-                                    <td>
-                                        <%= item.username %>
-                                    </td>
-                                    <td>
-                                        <button class="btn btn-warning">Edit</button>
-                                        <button class="btn btn-danger">Delete</button>
-                                    </td>
-                                </tr>
+                            <tr>
+                                <th scope="row">
+                                    <%= item.id %>
+                                </th>
+                                <td>
+                                    <%= item.email %>
+                                </td>
+                                <td>
+                                    <%= item.username %>
+                                </td>
+                                <td>
+                                    <button class="btn btn-warning">Edit</button>
+                                    <form style="display: inline;" action="/delete-user/<%= item.id %>" method="POST"></form>
+                                    <button class="btn btn-danger" type="submit">
+                                        Delete
+                                    </button>
+                                </td>
+                            </tr>
                             <% }) %>
                     </tbody>
                 </table>
