--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>List Users</title>
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
@@ -61,11 +61,14 @@
                                     <%= item.username %>
                                 </td>
                                 <td>
-                                    <button class="btn btn-warning">Edit</button>
-                                    <form style="display: inline;" action="/delete-user/<%= item.id %>" method="POST"></form>
-                                    <button class="btn btn-danger" type="submit">
-                                        Delete
-                                    </button>
+                                    <a class="btn btn-warning" href="/update-user/<%= item.id %>">
+                                        Edit
+                                    </a>
+                                    <form style="display: inline;" action="/delete-user/<%= item.id %>" method="POST">
+                                        <button class="btn btn-danger" type="submit">
+                                            Delete
+                                        </button>
+                                    </form>
                                 </td>
                             </tr>
                             <% }) %>
